...
      <View style={styles.contentWrapper}>
        <HeaderLightText>{i18n.t('login.title')}</HeaderLightText>
        <Item floatingLabel error={hasErrors} style={styles.item}>
          <Label style={styles.labelStyle}>{i18n.t('login.email-label')}</Label>
          <Input
            autoCapitalize="none"
            autoCompleteType="email"
            blurOnSubmit={false}
            keyboardType="email-address"
            onChangeText={(username) => {
              setUser(username);
              setIsValid(username, pass);
            }}
...

        <BrandedButton
          enabled={isValid && !loading}
          loading={loading}
          onPress={handleLogin}
          style={styles.button}
          testID="login-button"
        >
          <Text>{i18n.t('log-in')}</Text>
        </BrandedButton>

        <View style={styles.textWrapper}>
          <RegularText>{i18n.t('login.dont-have-account')}</RegularText>
...
