...
    diseasesTitle = `${i18n.t(`disease-cards.${diseasesChosen[0]}.name`)} & ${i18n.t(
      `disease-cards.${diseasesChosen[1]}.name`,
    )}`;
  } else if (numberDiseases > 2) {
    diseasesTitle = `${i18n.t(`disease-cards.${diseasesChosen[0]}.name`)}, ${i18n.t(
      `disease-cards.${diseasesChosen[1]}.name`,
    )} & ${i18n.t('more')}`;
  }

  return (
    <ReconsentScreen
      activeDot={2}
      buttonOnPress={() => NavigatorService.navigate('ReconsentRequestConsent')}
...
