...
  enableSubmit: false,
  errorMessage: '',
};

interface RegistrationData {
  email: string;
  password: string;
}

const initialRegistrationValues = {
  email: '',
  password: '',
};
...
